--- a/public/style.css
+++ b/public/style.css
@@ -5,57 +5,57 @@
   text-decoration: none;
 }
 
-.nav{
-    background-color: #222831;
-    color: #FFFFFF;
-    display: flex;
-    justify-content: space-evenly;
-    height: 4rem;
-    align-items: center;
-    font-size: large;
-    font-weight: 800;
+.nav {
+  background-color: #222831;
+  color: #ffffff;
+  display: flex;
+  justify-content: space-evenly;
+  height: 4rem;
+  align-items: center;
+  font-size: large;
+  font-weight: 800;
 }
 
-.nav a{
-    color: #FFFFFF;
+.nav a {
+  color: #ffffff;
 }
 
-.nav a:first-child{
-    color: #00adb5;
+.nav a:first-child {
+  color: #00adb5;
 }
 
-table{
-    width: 98%;
-    /* height: 4rem; */
-    margin: 1rem;
-    border: 3px solid black;
-    background-color: #393e46;
-    color: #FFFFFF;
-    border-collapse: collapse;
+table {
+  width: 98%;
+  /* height: 4rem; */
+  margin: 1rem;
+  border: 3px solid black;
+  background-color: #393e46;
+  color: #ffffff;
+  border-collapse: collapse;
 }
 
-th{
-    border-left-width: 3px;
-    height: 3rem;
+th {
+  border-left-width: 3px;
+  height: 3rem;
 }
 
-td{
-    height: 3rem;
-    color: #FFFFFF;
-    padding-left: 2rem;
+td {
+  height: 3rem;
+  color: #ffffff;
+  padding-left: 2rem;
 }
 
-.data{
-    background-color: #FFFFFF;
+.data {
+  background-color: #ffffff;
 }
 
-.row{
-    color: #222831;
+.row {
+  color: #222831;
 }
 
-.hd{
-margin: 2rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.hd {
+  margin: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
