--- a/index.ejs
+++ b/index.ejs
@@ -28,6 +28,7 @@
         <th>Score</th>
         <th>Author</th>
         <th>Completed At</th>
+        <th>Actions</th>
       </tr>
 
       <% if(books.length>0) { %> 
@@ -41,6 +42,7 @@
                 <td class="row"><%- books[i].Score %></td>
                 <td class="row"><%- books[i].Author %></td>
                 <td class="row"><%- books[i].Completed %></td>
+                <td><a href="/delete-books?name=<%- books[i].Name %>"><img width="24" height="24" src="https://img.icons8.com/material-sharp/24/filled-trash.png" alt="filled-trash"/></a></td>
             </tr>
 
         <% } %>
