--- a/update-books.ejs
+++ b/update-books.ejs
@@ -16,6 +16,7 @@
     <div class="box">
       <h3 class="new">EDIT</h3>
       <form action="" method="post">
+        <input type="hidden" name="bid" value="<%= books[0].bid  %>">
         <input
           type="text"
           name="name"
@@ -60,7 +61,6 @@
           value="<%= books[0].Completed  %>"
           placeholder="Completed Date"
           class="det"
-          required
         /><br /><br />
         <input type="submit" value="submit" class="deta sub"/>
       </form>
