linked search and added icons

--- a/index.ejs
+++ b/index.ejs
@@ -10,15 +10,20 @@
   </head>
   <body>
     <nav class="nav">
-      <a class="links" href="/index.ejs">ALL</a>
+      <a class="links" href="/">ALL</a>
       <a class="links" href="##">GROUPED BY STATUS</a>
       <a class="links" href="##">BOOKS</a>
     </nav>
     <div class="hd">
       <h1 class="pl">PERSONAL LIBRARY</h1>
-      <a href="/new">
-        <img width="80rem" src="https://img.icons8.com/clouds/100/add.png" alt="add"/>
-      </a>
+      <div class="search">
+        <a href="/search-books">
+          <img width="100" height="100" src="https://img.icons8.com/clouds/100/search.png" alt="search"/>
+        </a>
+        <a href="/new">
+          <img width="80rem" src="https://img.icons8.com/clouds/100/add.png" alt="add"/>
+        </a>
+      </div>
     </div>
     <table border="1">
       <tr>
