--- a/search-books.ejs
+++ b/search-books.ejs
@@ -14,7 +14,7 @@
       <a class="links" href="##">GROUPED BY STATUS</a>
       <a class="links" href="##">BOOKS</a>
     </nav>
-    <div class="search">
+    <div class="search margin-2">
         <form action="/search" class="frm">
             <input type="search" name="name" placeholder="Search Book Name" class="det">
             <input type="search" name="author" placeholder="Search Author Name" class="det">
