--- a/index.ejs
+++ b/index.ejs
@@ -21,7 +21,7 @@
           <img width="100" height="100" src="https://img.icons8.com/clouds/100/search.png" alt="search"/>
         </a>
         <a href="/new">
-          <img width="80rem" src="https://img.icons8.com/clouds/100/add.png" alt="add"/>
+          <img width="100" height="100" src="https://img.icons8.com/clouds/100/add.png" alt="add"/>
         </a>
       </div>
     </div>
