--- a/index.ejs
+++ b/index.ejs
@@ -10,8 +10,8 @@
   </head>
   <body>
     <nav class="nav">
-      <a class="links" href="/">ALL</a>
-      <a class="links" href="##">GROUPED BY STATUS</a>
+      <a class="selected" href="/">ALL</a>
+      <a class="links" href="/status">GROUPED BY STATUS</a>
       <a class="links" href="##">BOOKS</a>
     </nav>
     <div class="hd">
