--- a/index.ejs
+++ b/index.ejs
@@ -9,10 +9,15 @@
     <title>Personal Library</title>
   </head>
   <body>
-    <nav class="nav">
-      <a class="selected" href="/">ALL</a>
-      <a class="links" href="/status">GROUPED BY STATUS</a>
-      <a class="links" href="##">BOOKS</a>
+    <nav>
+      <div class="nav">
+        <a class="selected" href="/">ALL</a>
+        <a class="links" href="/status">GROUPED BY STATUS</a>
+        <!-- <a class="links" href="##">BOOKS</a> -->
+      </div>
+      <a href="/logout">
+        <img height="100" src="https://img.icons8.com/clouds/100/exit.png" alt="exit"/>
+      </a>
     </nav>
     <div class="hd">
       <h1 class="pl">PERSONAL LIBRARY</h1>
