--- a/status.ejs
+++ b/status.ejs
@@ -9,10 +9,15 @@
     <title>GROUPED BY STATUS</title>
   </head>
   <body>
-    <nav class="nav">
-      <a class="links" href="/">ALL</a>
-      <a class="selected" href="/status">GROUPED BY STATUS</a>
-      <a class="links" href="##">BOOKS</a>
+    <nav>
+      <div class="nav">
+        <a class="links" href="/">ALL</a>
+        <a class="selected" href="/status">GROUPED BY STATUS</a>
+        <!-- <a class="links" href="##">BOOKS</a> -->
+      </div>
+      <a href="/logout">
+        <img height="100" src="https://img.icons8.com/clouds/100/exit.png" alt="exit"/>
+      </a>
     </nav>
     <div class="all">
         <div class="col not">
